--- a/.github/workflows/sd.yml
+++ b/.github/workflows/sd.yml
@@ -47,12 +47,12 @@ jobs:
             }
           - {
               BASE_IMAGE: "pytorch/pytorch:2.3.1-cuda11.8-cudnn8-runtime",
-              suffix: "2.3.1-cuda11.8",
+              suffix: "torch2.3-cuda11.8",
               repo: "onediff",
             }
           - {
               BASE_IMAGE: "pytorch/pytorch:2.3.1-cuda12.1-cudnn8-runtime",
-              suffix: "2.3.1-cuda12.1",
+              suffix: "torch2.3-cuda12.1",
               repo: "onediff",
             }
     env:
