--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -305,7 +305,9 @@ jobs:
         if: matrix.test-suite == 'comfy'
         run: |
           docker exec -w /app/ComfyUI -d ${{ env.CONTAINER_NAME }} sh -c "python3 /app/ComfyUI/main.py --gpu-only --disable-cuda-malloc --port 8188 --extra-model-paths-config /src/onediff/tests/comfyui/extra_model_paths.yaml > /app/ComfyUI/onediff_comfyui.log 2>&1"
+          docker cp /src/onediff/tests/comfyui/workflows/input/control/sdxl-unet-control-lora-speedup.png ${{ env.CONTAINER_NAME}}:/app/ComfyUI/input
           sleep 30
+
       # print to check if comfy is launched successfully
       - run: docker exec ${{ env.CONTAINER_NAME }} ps aux
       - run: docker exec -w /src/onediff/onediff_comfy_nodes/benchmarks ${{ env.CONTAINER_NAME }} bash scripts/install_env.sh /app/ComfyUI
