--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -305,7 +305,7 @@ jobs:
         if: matrix.test-suite == 'comfy'
         run: |
           docker exec -w /app/ComfyUI -d ${{ env.CONTAINER_NAME }} sh -c "python3 /app/ComfyUI/main.py --gpu-only --disable-cuda-malloc --port 8188 --extra-model-paths-config /src/onediff/tests/comfyui/extra_model_paths.yaml > /app/ComfyUI/onediff_comfyui.log 2>&1"
-          docker exec -w /app/ComfyUI -d ${{ env.CONTAINER_NAME }} sh -c "cp /src/onediff/tests/comfyui/workflows/input/control/sdxl-unet-control-lora-speedup.png /app/ComfyUI/input"
+          docker exec -w /app/ComfyUI -d ${{ env.CONTAINER_NAME }} sh -c "cp /src/onediff/tests/comfyui/workflows/input/control/ /app/ComfyUI/input/control -r"
           sleep 30
 
       # print to check if comfy is launched successfully
