--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -308,7 +308,7 @@ jobs:
           docker exec -w /app/ComfyUI -d ${{ env.CONTAINER_NAME }} sh -c "mkdir -p /app/ConfyUI/input/control/"
           # docker cp /share_nfs/hf_models/controlnet/sdxl-unet-control-lora-speedup.png ${{ env.CONTAINER_NAME }}:/app/ComfyUI/input/control/
           sleep 30
-          docker exec -w /app/ComfyUI -d ${{ env.CONTAINER_NAME }} sh -c "ls -R  /app/ComfyUI/input/control > /app/ComfyUI/onediff_comfyui.log 2>&1"
+          docker exec -w /app/ComfyUI -d ${{ env.CONTAINER_NAME }} sh -c "ls -R  /app/ComfyUI/input > /app/ComfyUI/onediff_comfyui.log 2>&1"
 
 
       # print to check if comfy is launched successfully
